test/corpus/javascript.txt
================================================================================
Tag with variable
================================================================================

tag(attr=VARIABLE, attr=VARIABLE)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with number
================================================================================

tag(attr=1)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with double quote string
================================================================================

tag(attr="string", attr="string")

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))))

================================================================================
Tag with single quote string
================================================================================

tag(attr='string', attr='string')

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))))

================================================================================
Tag with template string
================================================================================

tag(attr=`string ${variable} string`, attr=`string ${variable} string`)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with array
================================================================================

tag(attr=[1, 2, 3], attr=[1,2,3])

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with object
================================================================================

tag(attr={key: 'value', key: 'value'}, attr={key: 'value', key: 'value'})

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with function call
================================================================================

tag(attr=getValue(), attr=getValue())

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with nested function call
================================================================================

tag(attr=getValue(getOtherValue()))

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with chained function call
================================================================================

tag(attr=getValue(getOtherValue().getValue()).getType())

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with a deeply nested and chained function call attribute
================================================================================

tag(attr=getValue(getOtherValue(variable.getType(   valueKey   )).getValue('this_user')).getType(2 ^^ 6 || 9))

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with deeply nested and chained function call attributes
================================================================================

tag(
  attr=getValue(getOtherValue(variable.getType(   valueKey   )).getValue('this_user')).getType(2 ^^ 6 || 9)
  otherattr=getValue(getOtherValue(variable.getType(   valueKey   )).getValue('this_user')).getType(2 ^^ 6 || 9)
)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with operator on variables
================================================================================

tag(attr=number + number, attr=getValue() * 2)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with operator on variables without comma separation
================================================================================

tag(attr=number + number attr=value || value)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with operator on strings
================================================================================

tag(attr='string' + "string")

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag operator on strings and variables
================================================================================

tag(attr='hello' + goodbye)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with operator on mixed types
================================================================================

tag(attr='string' + "string" * number || [1, 2, 3] - {key: 'value'}, attr=25 && 2)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with operator on mixed types without comma separation
================================================================================

tag(attr='string' + "string" * number || [1, 2, 3] - {key: 'value'} attr=25 && 2)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with ternary with operator
================================================================================

tag(attr=variable + 10 ? [1, 2, 3] || false : "string?string:" * 100, attr=condition ? true : false)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with ternary with operator without comma separation
================================================================================

tag(attr=variable + 10 ? [1, 2, 3] || false : "string?string:" * 100 attr=condition ? true : false)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with basic operators
================================================================================

tag(attr=2+8)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with operators with whitespace
================================================================================

tag(attr=2 + 8)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with chained operators
================================================================================

tag(attr=(2+8)*4*8+2)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with array lookup
================================================================================

tag(attr=array_lookup[2])

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with basic function call
================================================================================

tag(attr=function_call())

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with function call with array param
================================================================================

tag(attr=one(two([])))

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with function call with nested complex function calls
================================================================================

tag(attr=one(two(123,455)))

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag function call with nested complex function calls with whitespace
================================================================================

tag(attr=one(two(123,   455)))

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with complex whitespace function call with comma-less second param
================================================================================

tag(attr=one(two(123,   455)) other=123)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with complex whitespace function call with comma second param
================================================================================

tag(attr=one(two(123,   455)), other=123)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with large spaces between comma-less attributes
================================================================================

tag(attr=one(123   ,455)    test)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)))))

================================================================================
Tag with several operator attributes with large spaces
================================================================================

tag(attr=hello(((12355)))+2    another=2 +2)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with several operator attributes with large spaces and arrays
================================================================================

tag(attr=hello(12355)+2    another=2 +[23+12])

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))

================================================================================
Tag with function call with missing parameters
================================================================================

tag(attr=hello(123,,55)+2   another=2)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (javascript))
      (attribute
        (attribute_name)
        (javascript)))))
